/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Scala library project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.2/userguide/building_java_projects.html
 */

plugins {
    // Apply the scala Plugin to add support for Scala.
    id 'scala'

    // Apply the java-library plugin for API and implementation separation.
    id 'java-library'
    id 'maven-publish'
}

apply from: 'config.gradle'

repositories {
    mavenLocal()
    maven {
        url = uri('http://localnexus:8081/repository/valkyrie/')
        allowInsecureProtocol = true
        credentials {
            username repoUser
            password repoUserPassword
        }
    }

    maven {
        url = uri('http://localnexus:8081/repository/game-release')
        allowInsecureProtocol = true
        credentials {
            username repoUser
            password repoUserPassword
        }
    }

    maven {
         url 'http://maven.aliyun.com/nexus/content/groups/public/' 
         allowInsecureProtocol = true
    }
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

java.sourceCompatibility = JavaVersion.VERSION_17
java.targetCompatibility = JavaVersion.VERSION_17


description = 'valkyrie.game'


sourceSets {
    main {
        java { srcDirs = [] }
        scala { srcDirs = ["src/main/scala","src/main/java"] }

    }
}


dependencies {
    // Use Scala 2.13 in our library project
    implementation "org.scala-lang:scala-library:${libraryVersion.scala}"
    implementation "org.scala-lang:scala-compiler:${libraryVersion.scala}"
    implementation "org.scala-lang:scala-reflect:${libraryVersion.scala}"

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation 'com.google.guava:guava:30.1.1-jre'

    // Use Scalatest for testing our library
    testImplementation 'junit:junit:4.13.2'
    testImplementation "org.scalatest:scalatest_${libraryVersion.scalaMain}:3.2.9"
    testImplementation "org.scalatestplus:junit-4-13_${libraryVersion.scalaMain}:3.2.2.0"

    // Need scala-xml at test runtime
    testRuntimeOnly "org.scala-lang.modules:scala-xml_${libraryVersion.scalaMain}:1.2.0"

    // This dependency is exported to consumers, that is to say found on their compile classpath.
    api 'org.apache.commons:commons-math3:3.6.1'


    implementation "com.typesafe.slick:slick_${libraryVersion.scalaMain}:${libraryVersion.slick}"
    implementation "com.typesafe.slick:slick-hikaricp_${libraryVersion.scalaMain}:${libraryVersion.slick}"
    implementation "mysql:mysql-connector-java:5.1.25"
    implementation "com.typesafe.akka:akka-slf4j_${libraryVersion.scalaMain}:${libraryVersion.akka}"
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation "com.h2database:h2:1.4.187"
//    implementation 'com.thesamet.scalapb:scalapb-runtime_2.13:0.10.11'
    implementation "com.thesamet.scalapb:scalapb-runtime_${libraryVersion.scalaMain}:${libraryVersion.scalapb}"
    implementation "com.typesafe.akka:akka-actor_${libraryVersion.scalaMain}:${libraryVersion.akka}"
    implementation "com.lightbend.akka:akka-stream-alpakka-slick_${libraryVersion.scalaMain}:${libraryVersion.alpakka}"
    implementation "com.typesafe.akka:akka-stream_${libraryVersion.scalaMain}:${libraryVersion.akka}"
    implementation 'commons-codec:commons-codec:1.11'
    implementation 'org.apache.commons:commons-crypto:1.0.0'

    implementation "com.mobius:mobius-core_${libraryVersion.scalaMain}:${libraryVersion.mobius}"
    implementation "com.mobius:mobius-net_${libraryVersion.scalaMain}:${libraryVersion.mobius}"
    implementation "com.mobius:mobius-db_${libraryVersion.scalaMain}:${libraryVersion.mobius}"
    implementation "com.mobius:mobius-modular_${libraryVersion.scalaMain}:${libraryVersion.mobius}"
    implementation 'com.cala:orm-framework:0.0.7'
    implementation 'javax.persistence:persistence-api:1.0.2'
    implementation"com.fasterxml.jackson.core:jackson-databind:2.13.0"
    implementation 'com.github.ben-manes.caffeine:caffeine:3.0.4'
    implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
}

tasks.withType(JavaCompile) {
    // for JEP 406
    options.compilerArgs += "--enable-preview"
    options.encoding = 'UTF-8'
}
tasks.withType(ScalaCompile) {
    // for JEP 406
    options.compilerArgs += "--enable-preview";
    options.encoding = 'UTF-8'

}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}
